# oxidized-wallet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: DATABASE_SCHEMA.md  DEVELOPMENT_DECISIONS.md  PROJECT_STRUCTURE.md  TECHNICAL_ARCHITECTURE.md
docs/archive/: MOCK_DATA_GENERATION_WITH_SPECTA.md  MVP_IMPLEMENTATION_PLAN.md
docs/design/: UI_DESIGN_SPECIFICATION.md
docs/development/: FRONTEND_MOCK_DATA_GUIDE.md
docs/planning/: DOUBLE_ENTRY_RULES.md  ENHANCEMENT_IDEAS.md  FEATURE_ROADMAP.md  MVP_IMPLEMENTATION_PLAN.md  V0.2.0_PLAN.md
src/: bindings.ts
wallet-core/: Cargo.toml
wallet-core/migrations/: 20250627200817_initial_schema.down.sql  20250627200817_initial_schema.up.sql
wallet-core/src/: lib.rs
wallet-core/src/db/: accounts.rs  connection.rs  mod.rs  transactions.rs
wallet-core/src/errors/: mod.rs
wallet-core/src/models/: account.rs  mod.rs  money.rs  transaction.rs
wallet-core/src/services/: account_service.rs  mod.rs  report_service.rs  transaction_service.rs
wallet-tauri/: package.json  vite.config.ts
wallet-tauri/src/: App.vue  bindings.ts  main.ts
wallet-tauri/src-tauri/: Cargo.toml  tauri.conf.json
wallet-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
wallet-tauri/src/components/: AccountEditDialog.vue  AccountForm.vue  AppSidebar.vue
wallet-tauri/src/router/: index.ts
wallet-tauri/src/services/: api.ts
wallet-tauri/src/types/: global.d.ts
wallet-tauri/src/views/: Accounts.vue  Dashboard.vue  Transactions.vue
(+12 files in other folders)
