[package]
name = "wallet-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
specta = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
